@startuml
'https://plantuml.com/sequence-diagram

interface RankDao {
    + {abstract} getAllRecords(): List<String>
    + {abstract} addRecord(String user, String date, String score): void
    + {abstract} deleteRecord(String user, String date): void
    + {abstract} deleteRecord(int row): void
    + {abstract} rankSort(): void
    + {abstract} printRanks(): void
    + {abstract} getSortRecordsArray(): String[][]

}

class RankDaolmpl {
    - record: File
    - recordsList: List<Record>

    + RankDaolmpl()
    + getAllRecords(): List<String>
    + addRecord(String user, String date, String score): void
    + deleteRecord(String user, String date): void
    + deleteRecord(int row): void
    + rankSort(): void
    + printRanks(): void
    + getSortRecordsArray(): String[][]
}

RankDao <|.. RankDaolmpl

class Record {
    - user: String
    - score: int
    - date: String
    + Record(String user, int score, String date)
    + toString(): String
    + getUser(): String
    + getScore(): int
    + getDate(): String
}

Record <.. RankDaolmpl
@enduml